--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "prefer-stable": true,
     "require": {
-        "php": "^7.2"
+        "php": "^7.2",
+        "ext-sodium": "*"
     },
     "autoload": {
         "psr-4": {
