--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 php:
-  - '7.3'
+  - '8.2'
 sudo: false
 before_script:
   - travis_retry composer self-update
@@ -8,4 +8,10 @@ before_script:
 script:
   - php vendor/bin/codecept run unit
 branches:
-    only: master
+  only:
+    - 2.0
+dist: focal
+addons:
+  apt:
+    packages:
+      - libonig5
