--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "prefer-stable": true,
     "require": {
-        "php": "^7.3",
+        "php": "^8.2",
         "ext-sodium": "*"
     },
     "autoload": {
@@ -31,11 +31,13 @@
         }
     },
     "require-dev": {
-        "codeception/codeception": "^3.0"
+        "codeception/codeception": "^5.1",
+        "codeception/module-phpbrowser": "^3.0",
+        "codeception/module-asserts": "^3.0"
     },
     "config": {
         "platform": {
-            "php": "7.3.0"
+            "php": "8.2"
         },
         "optimize-autoloader": true,
         "sort-packages": true
